--- a/website8/styles.css
+++ b/website8/styles.css
@@ -30,7 +30,7 @@ h4 {
 }
 h5 {
     color: rgb(207, 71, 119);
-    font-size: 2.4em;
+    font-size: 2em;
     text-align: center;
     margin-bottom: 0;
 }
@@ -40,7 +40,7 @@ h6 {
     margin-bottom: 0;
 }
 body, h1, h2, h3, h4, h5, h6 { 
-    font-family: 'Futura', 'Arial', 'Helvetica', sans-serif; 
+    font-family: 'Lora', 'Georgia', 'Helvetica', sans-serif; 
     font-weight: 300;
     line-height: 1.9em;
 }
@@ -186,7 +186,6 @@ p {
 #keywords {
     width: 25%;
     font-stretch: condensed;
-    font-weight: 700;
     font-style: italic;
     color: grey;
 }
@@ -196,6 +195,7 @@ p {
 }
 .invisible-list li {
     margin-bottom: 0;
+    line-height: normal;
 }
 .high-line-interval {
     line-height: 150%;
@@ -246,9 +246,94 @@ li {
 .rose-list {
     list-style-type: none;
     color:rgb(207, 71, 119);
+    padding-left: 0;
 }
 .italic-list {
     font-style: italic;
     font-size: smaller;
     line-height: normal;
+}
+.framed {
+    border: 1px solid rgb(207, 71, 119);
+    padding: 1em;
+    margin-top: 2em;
+}
+.wrapped {
+    float: left;
+    margin: 0 30px 30px 0;
+    width: 35%;
+    height: auto;
+}
+.contact-form {
+    border-radius: 5px;
+}
+.contact-form label {
+    display: block;
+}
+.contact-form input, .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid grey;
+    border-radius: 3px;
+}
+.contact-form button {
+    padding: 10px;
+    background-color: grey;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.contact-form button:hover {
+    background-color: rgb(207, 71, 119);
+}
+.clear {
+    clear: both;
+}
+.slideshow {
+    position: relative;
+    height: 500px;
+}
+.slides {
+    position: absolute;
+    animation: fade 25s infinite;
+    opacity: 0;
+}
+.slides:nth-child(1) {
+    animation-delay: 0s;
+}
+.slides:nth-child(2) {
+    animation-delay: 5s;
+}
+.slides:nth-child(3) {
+    animation-delay: 10s;
+}
+.slides:nth-child(4) {
+    animation-delay: 15s;
+}
+.slides:nth-child(5) {
+    animation-delay: 20s;
+}
+@keyframes fade {
+    0% {opacity: 0;}
+    20% {opacity: 1;}
+    40% {opacity: 1;}
+    60% {opacity: 0;}
+    100% {opacity: 0;}
+}
+.fade-scale-in {
+    opacity: 0;
+    transform: scale(0.5);
+    animation: fadeScaleIn 2s forwards;
+}
+@keyframes fadeScaleIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
